--- a/pom.xml
+++ b/pom.xml
@@ -33,10 +33,11 @@
     </dependencyManagement>
 
     <dependencies>
-    <dependency>
-        <groupId>io.vertx</groupId>
-        <artifactId>vertx-core</artifactId>
-    </dependency>
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-core</artifactId>
+            <version>3.9.1</version>
+        </dependency>
     <dependency>
         <groupId>io.vertx</groupId>
         <artifactId>vertx-rx-java</artifactId>
@@ -53,8 +54,16 @@
         <groupId>io.vertx</groupId>
         <artifactId>vertx-sockjs-service-proxy</artifactId>
     </dependency>
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-rx</artifactId>
+            <version>3.3.1</version>
+            <type>pom</type>
+        </dependency>
 
-    <dependency>
+
+
+        <dependency>
         <groupId>io.vertx</groupId>
         <artifactId>vertx-codegen</artifactId>
         <scope>provided</scope>
@@ -88,9 +97,54 @@
         <artifactId>vertx-health-check</artifactId>
     </dependency>
 
+<!--jdbc and sql dependency-->
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-jdbc-client</artifactId>
+            <version>3.9.1</version>
+        </dependency>
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-sql-client</artifactId>
+            <version>3.8.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>2.4.0</version>
+            <scope>runtime</scope>
+        </dependency>
+
+<!--        Service proxy -->
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-service-proxy</artifactId>
+            <version>3.9.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-web-templ-freemarker</artifactId>
+            <version>3.9.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-rx-java</artifactId>
+            <version>3.8.3</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/io.vertx/vertx-web-common -->
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-web-common</artifactId>
+            <version>3.9.1</version>
+        </dependency>
 
 
-    <!-- Test dependencies -->
+
+
+
+        <!-- Test dependencies -->
     <dependency>
         <groupId>io.vertx</groupId>
         <artifactId>vertx-unit</artifactId>
@@ -114,13 +168,25 @@
         <version>1.7.0</version>
         <scope>test</scope>
     </dependency>
-<!--    <dependency>-->
-<!--        <groupId>io.rest-assured</groupId>-->
-<!--        <artifactId>rest-assured</artifactId>-->
-<!--        <version>3.0.2</version>-->
-<!--        <scope>test</scope>-->
-<!--    </dependency>-->
-</dependencies>
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-auth-oauth2</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-jdbc-client</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql.conn.version}</version>
+            <optional>true</optional>
+        </dependency>
+
+    </dependencies>
 
     <build>
         <plugins>
